templates/kubernetes/basic/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summarizer-api
  labels:
    app: summarizer
    tier: api
spec:
  selector:
    matchLabels:
      app: summarizer
      tier: api
  template:
    metadata:
      labels:
        app: summarizer
        tier: api
    spec:
      volumes:
        - name: plugin-config
          configMap:
            name: summarizer-plugins
      containers:
        - name: api
          image:
          imagePullPolicy: Always
          ports:
            - name: api-port
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: plugin-config
              subPath: plugin_config.json
              mountPath: "/app/plugin_config.json"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: api-port
            periodSeconds: 60
            timeoutSeconds: 60
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: summarizer-api
spec:
  selector:
    app: summarizer
    tier: api
  ports:
    - port: 5000
      targetPort: api-port
