templates/kubernetes/basic/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tldr-frontend
  labels:
    app: tldr
    tier: frontend
spec:
  selector:
    matchLabels:
      app: tldr
      tier: frontend
  template:
    metadata:
      labels:
        app: tldr
        tier: frontend
    spec:
      containers:
        - name: frontend
          image:
          imagePullPolicy: Always
          env: []
          ports:
            - name: frontend-port
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: frontend-port
            periodSeconds: 15
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tldr-frontend
spec:
  selector:
    app: tldr
    tier: frontend
  ports:
    - port: 80
      targetPort: frontend-port
