templates/kubernetes/basic/grobid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summary-workbench-grobid
  labels:
    app: summary-workbench
    tier: grobid
spec:
  selector:
    matchLabels:
      app: summary-workbench
      tier: grobid
  template:
    metadata:
      labels:
        app: summary-workbench
        tier: grobid
    spec:
      containers:
        - name: grobid
          image: mongo:latest
          ports:
            - name: grobid-port
              containerPort: 8070
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8070
            periodSeconds: 15
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: summary-workbench-grobid
spec:
  selector:
    app: summary-workbench
    tier: grobid
  ports:
    - port: 8070
      targetPort: grobid-port
