templates/kubernetes/basic/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tldr-mongodb
  labels:
    app: tldr
    tier: mongodb
spec:
  selector:
    matchLabels:
      app: tldr
      tier: mongodb
  template:
    metadata:
      labels:
        app: tldr
        tier: mongodb
    spec:
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: tldr-mongodb-data
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - name: mongodb-port
              containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
          readinessProbe:
            httpGet:
              path: /
              port: 27017
            periodSeconds: 15
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tldr-mongodb
spec:
  selector:
    app: tldr
    tier: mongodb
  ports:
    - port: 27017
      targetPort: mongodb-port
