templates/kubernetes/basic/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summary-workbench-proxy
  labels:
    app: summary-workbench
    tier: proxy
spec:
  selector:
    matchLabels:
      app: summary-workbench
      tier: proxy
  template:
    metadata:
      labels:
        app: summary-workbench
        tier: proxy
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: summary-workbench-proxy
      containers:
        - name: proxy
          image: nginx:alpine
          ports:
            - name: summary-workbench-port
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              subPath: nginx.conf
              mountPath: "/etc/nginx/nginx.conf"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: summary-workbench-port
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: summary-workbench
spec:
  selector:
    app: summary-workbench
    tier: proxy
  ports:
    - port: 80
      targetPort: summary-workbench-port
