templates/kubernetes/basic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tldr-ingress
  annotations:
    nginx.ingress.kubernetes.io/client-max-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3000'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3000'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3000'
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tldr
                port:
                  number: 80
